--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -307,8 +307,9 @@ This translation should be marked with `*`. For example do this in your config f
 After that you can start using your categories without specifying them in i18n translations. This is more familiar as for Yii1. Now you can create
 files under default translation `basePath` and simply use them as usual, for example:
 
-1. create your category file under messages `basePath`, according default translation. Since we are not overriding `basePath` property of
+* Create your category file under messages `basePath`, according default translation. Since we are not overriding `basePath` property of
 [`PhpMessageSource`](https://github.com/yiisoft/yii2/blob/master/framework/i18n/PhpMessageSource.php#L40) it would be `@app/messages`.
+
 ```php
 # not_specified_category.php file under @app/messages directory.
 
@@ -317,7 +318,7 @@ return [
 ];
 ```
 
-2. Use your category as before.
+* Use your category as before.
 
 ```php
 echo Yii::t('not_specified_category','message from not specified category');
