--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -289,8 +289,8 @@ Examples
 
 ###Specifying default translation
 
-You can specify default translation, that will be used as a fallback for categories, that don't match any other translation.
-This translation should be marked with `*`. For example do this in your config file (for the `yii2-basic` application it will be `web.php`):
+You can specify default translation that will be used as a fallback for categories that don't match any other translation.
+This translation should be marked with `*`. In order to do it add the following to the config file (for the `yii2-basic` application it will be `web.php`):
 
 ```php
 //configure i18n component
