Fixed link in i18n docs

--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -78,7 +78,7 @@ Yii tries to load appropriate translation from one of the message sources define
 ```
 
 In the above `app*` is a pattern that specifies which categories are handled by the message source. In this case we're
-handling everything that begins with `app`. You can also specify default translation, for more info see [this](specifying-default-translation) example.
+handling everything that begins with `app`. You can also specify default translation, for more info see [this example](i18n.md#examples).
 
 `class` defines which message source is used. The following message sources are available:
 
