--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -357,7 +357,7 @@ class Module extends \yii\base\Module
 ```
 
 In the example above we are using wildcard for matching and then filtering each category per needed file. Instead of using `fileMap` you can simply
-use convention of category mapping to the same named file and use `Module::t('validation')` or `Module::t('form)` directly.
+use convention of category mapping to the same named file and use `Module::t('validation')` or `Module::t('form')` directly.
 
 ###Translating widgets messages
 
